Revision history for {{$dist->name}}

{{$NEXT}}
  [Enhancements]
  - Remove use of blessed pairs, which allows List::Util to be downgraded.

v0.3.2    2022-12-06 16:10:07+00:00 Europe/London
  [Bux Fixes]
  - Fix the minimum version of List::Util.

v0.3.1    2022-12-04 09:22:27+00:00 Europe/London
  [Bux Fixes]
  - Specify minimum version of List::Util.

  [Documentation]
  - Documented requirements for customising the cache attribute.

v0.3.0    2022-11-30 09:34:51+00:00 Europe/London
  [Enhancements]
  - Append the netblock from the configuration to the log message when a request is blocked.

    Note that this might be an incompatible change if you are parsing the logs for fail2ban rules.

  [Documentation]
  - Document the log message.

v0.2.2    2022-11-16 21:35:26+00:00 Europe/London
  [Tests]
  - Added missing prerequisite.

v0.2.1    2022-11-16 20:43:06+00:00 Europe/London
  [Bug Fixes]
  - Removed postderef syntax which required a newer Perl version than declared.

v0.2.0    2022-11-16 14:33:56+00:00 Europe/London
  [Incompatible Changes]
  - The cache `file` has no default, and should be set by the user unless the `cache` is overridden.

  [Enhancements]
  - Added a `retry_after` attribute to change the default Retry-After header.

  [Documentation]
  - Added note to KNOWN ISSUES about how some search engines handle HTTP 429 responses.

v0.1.2    2022-11-15 14:52:21+00:00 Europe/London
  [Tests]
  - Fixed minimum Perl version.

v0.1.1    2022-11-15 12:36:00+00:00 Europe/London
  [Tests]
  - Adding missing prerequisite, GH#1 (Thanks Slaven Rezić)

  - Remove unused testing prereq.

v0.1.0    2022-11-14 13:20:32+00:00 Europe/London
  - First public release.