@@ -130,6 +130,16 @@ handle any overlapping or conflicting network ranges, or to specify exceptions f
 Some search engine robots may not respect HTTP 429 responses, and will treat these as errors. You may want to make an
 exception for trusted networks that gives them a higher rate than the default.
 
+This does not enforce consistent rates for named blocks. For example, if you specified
+
+```perl
+'10.0.0.0/16'    => [  60, 'named-group' ],
+'172.16.0.0/16'  => [ 100, 'named-group' ],
+```
+
+Requests from both netblocks would be counted together, but requests from 10./16 netblock would be rejected after 60
+requests. This is probably not something that you want.
+
 # SOURCE
 
 The development version is on github at [https://github.com/robrwo/Plack-Middleware-Greylist-](https://github.com/robrwo/Plack-Middleware-Greylist-)
